[project]
name = "package-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools]
packages = ["package_test"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

# [tool.setuptools.packages.find]
# where = ["."]
# include = ["package_test*"]
# exclude = []
# namespaces = false
